# sortDevOps

./: CMakeLists.txt  Makefile  README.md  sort.cpp
